# chemEng

./: .dockerignore  .gitignore  ChemEng_Start.bat  Dockerfile  LICENSE  README.md  README_起動方法.txt  __init__.py  __main__.py  pyproject.toml  requirements.txt  requirements_full.txt  server.py  start.sh  start_ngrok.bat  start_server.bat  vercel.json
.claude/: settings.local.json
.claude/skills/: cad-drawings.md
.github/workflows/: ci.yml  release-extension.yml
.playwright-mcp/: chemeng-property-estimation-template.txt  test_import.json
.playwright-mcp/slides/: presentation.html
ai/: __init__.py
api/: index.py  requirements.txt
core/: __init__.py  compat.py  errors.py  logging_config.py  registry.py  requirement.py  skill.py
deploy/aws/: chemeng.service  nginx.conf  setup.sh
docs/: deployment.md  presentation.html
engines/: __init__.py  base.py  cantera_engine.py  coolprop_engine.py  thermo_engine.py
interface/: __init__.py  api.py  cli.py  formatter.py
interface/web/: index.html  presentation.html
interface/web/css/: main.css
interface/web/js/: api.js  app.js  charts.js  config.js  forms.js  history.js  ui.js
interface/web/slides/: presentation.html  report_sample.html
skills/: __init__.py
skills/defaults/: common_substances.yaml
skills/schema/: absorption.yaml  distillation.yaml  extraction.yaml  heat_balance.yaml  lcoh.yaml  mass_balance.yaml  property_estimation.yaml  txy_diagram.yaml
skills/templates/: absorption.py  distillation.py  extraction.py  heat_balance.py  lcoh.py  mass_balance.py  property_estimation.py  txy_diagram.py
storage/: __init__.py
tests/: __init__.py  conftest.py  test_accuracy.py  test_api_security.py  test_core.py  test_engines.py  test_error_handling.py  test_integration.py
